2004-07-28  Jens Petersen  <petersen@haskell.org>

	* demo/glade/Makefile (EXTRA_TARFILES): Include simple.glade.

	* mk/library.mk (installfiles): Install lib.a as is, ie not mod
	644 and	don't reset timestamp.

	* mk/common.mk: Define INST_HIDIR, INST_LIBDIR, INST_INCLDIR and
	INST_BINDIR directly as normal make variables, so that lib
	packages get installed in separate subdirs.

2004-07-27  Duncan Coutts <duncan@coutts.uklinux.net>

	* demo/gconf/GConfDemo.hs, demo/gconf/Makefile: new gconf demo/test

	* Makefile: build gconf demo

2004-07-27  Jens Petersen  <petersen@haskell.org>

	* mk/config.mk.in: Define ABS_TOP.  No longer define CPP.

	* mk/common.mk: Sedpipe ABS_TOP and use it for TARDIR to fix
	tarsource target. 

	* glade/Makefile: Use TOP.  Generate GladeType.chs with the same
	invocation used by sourceview and gtk.

	* doc/Makefile: Use common.mk and EXTRA_TARFILES, drop own
	tarsource target and no longer set CURDIR and TARDIR.

	* VERSION: Up to 0.9.5.50

2004-07-26 Axel Simon <A.Simon@kent.ac.uk>

	* gtk/abstract/ButtonBox.chs: Remove buttonBoxGetChildSecondary
	for Gtk prior to 2.4.
	
2004-07-26 Duncan Coutts <duncan@coutts.uklinux.net>

	* configure.in: use relative $(TOP) variable rather than absolute $TOP
	variable, so Makefiles use relative paths. Add test for gconf package.
	Test for particular versions of gtk API.

	* Makefile: add gconf to list of dirs to build

	* tools/hierarchyGen/hierarchy.list: add GConf object.
	Remove preprocessor annotations, build classes conditionally using
	tags like 'gtk-2.4'. Remove unnecessary annotations by taking advantage
	of changes in the TypeGenerator. Only create GtkFileFilter when
	building against gtk 2.4 or later.

	* tools/hierarchyGen/TypeGen.hs: be a bit cleverer with dealing with
	type prefixes, less hard coded knowledge of Gtk types. No not require
	_get_type annotations when they can be worked out automatically. Allow
	tags like 'gtk-2.4'. Extra command line option to specify module name.
