@@ -1,3 +1,9 @@
+2004-07-28  Duncan Coutts <duncan@coutts.uklinux.net>
+
+	* Makefile: only build filechooser demo with gtk-2.4
+
+	* demo/filechooser/FileChooserDemo.glade: add demo's glade file
+
 2004-07-28  Jens Petersen  <petersen@haskell.org>
 
 	* demo/glade/Makefile (EXTRA_TARFILES): Include simple.glade.
